Your commit message here3

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,8 @@ button:hover {
   -ms-border-radius: 0.6rem;
   -o-border-radius: 0.6rem;
   margin: 3.2rem auto;
+  display: flex;
+  justify-content: center;
 
   form {
     display: flex;
